# xDB

./: LICENSE  README.md  README_CN.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
.windsurf/rules/: i.md
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_tables.sql
src-tauri/src/: db.rs  lib.rs  main.rs  memcached_manager.rs  models.rs  mysql_manager.rs  redis_manager.rs  sqlite_manager.rs  state.rs
src/components/common/: RowViewerDialog.tsx  TextFormatterDialog.tsx  TextFormatterWrapper.tsx
src/components/connection/: ConnectionForm.tsx  ConnectionGroupDialog.tsx  ConnectionGroupManager.tsx  ExportConnectionsDialog.tsx  ImportConnectionsDialog.tsx
src/components/layout/: ActivityBar.tsx  ConnectionTree.tsx  MainLayout.tsx  SettingsMenu.tsx  Sidebar.tsx  TabBar.tsx
src/components/redis/: RedisAddKeyDialog.tsx  RedisHashViewer.tsx  RedisKeyTree.tsx  RedisListViewer.tsx  RedisSetViewer.tsx  RedisStringViewer.tsx  RedisZSetViewer.tsx
src/components/settings/: SettingsPage.tsx
src/components/ui/: CommandConsole.tsx  CommandConsoleToggle.tsx  select.tsx  toast.tsx  toaster.tsx
src/components/workspace/: ConnectionManager.tsx  ConnectionSorter.tsx  DatabaseTablesTab.tsx  FilterBuilder.tsx  MemcachedWorkspace.tsx  MysqlWorkspace.tsx  RedisWorkspace.tsx  SqliteWorkspace.tsx  TableSchemaManager.tsx
src/components/workspace/memcached/: MemcachedWorkspace.tsx
src/components/workspace/mysql/: ColumnEditor.tsx  CreateDatabaseDialog.tsx  CreateTableDialog.tsx  DatabaseTablesTab.tsx  FilterBuilder.tsx  MysqlWorkspace.tsx  TableSchemaManager.tsx  TableSchemaTab.tsx
src/components/workspace/mysql/utils/: resultTable.ts  (+1 more)
src/components/workspace/redis/: RedisAddKeyDialog.tsx  RedisHashViewer.tsx  RedisKeyBrowserPanel.tsx  RedisKeyTree.tsx  RedisListViewer.tsx  RedisSetViewer.tsx  RedisStringViewer.tsx  RedisValuePanel.tsx  RedisValueViewer.tsx  RedisWorkspace.tsx  RedisZSetViewer.tsx  redisWorkspace.shared.ts
src/components/workspace/sqlite/: SqliteWorkspace.tsx
src/components/workspace/sqllite/: SqliteWorkspace.tsx
src/constants/: workspace.ts
src/hooks/: useCellEditor.ts  useDDLPanelResize.ts  useIsDarkTheme.ts  useKeyboardShortcut.ts  usePagination.ts  useToast.ts  useUpdater.ts
src/i18n/: index.ts
src/lib/: api.ts  commandLogger.ts  connectionDB.ts  crypto.ts  datetime.ts  formatters.ts  utils.ts
src/store/: useAppStore.ts  useConsoleStore.ts  useSettingsStore.ts  useUpdateStore.ts
src/types/: sql.ts
~/.tauri/: myapp.key  myapp.key.pub
(+18 files in other folders)
