[package]
name = "xDB"
version = "1.0.26"
description = "A modern database management tool"
authors = ["alan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xdb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "mysql", "derive", "chrono", "rust_decimal", "json"] }

tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }

redis = { version = "1.0.4", features = ["tokio-comp"], default-features = false }
memcache = { version = "0.19.0", default-features = false }

rust_decimal = "1.40.0"
flate2 = "1.1.9"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
urlencoding = "2.1"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
